# nectar

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
config/: base.yaml  mnist.yaml
nectar/: client.py  main.py  server.py  sim-async.py  sim-emotion-fedavg-.py  sim-emotion-fedistill.py  sim-emotion-mifl.py  sim-fedavg-imdb.py  sim-fedistill-imdb.py  sim-miflx.py  sim.py  task.py  test.py
nectar/asyncfl/: async_client_manager.py  async_server.py  async_strategy.py
nectar/loss/: cosine.py  dkd.py  jsd.py  kl.py  nkd.py  ntd.py  rkd.py  sp.py
nectar/mi_regressor/: metrics_distributed_fit_mi_gauss.csv  mi_gauss.csv  process.py
nectar/models/: resnet50.py  simplecnn.py  vgg16.py
nectar/models/cifar100/: resnet50.py
nectar/scripts/: data_metrics.py  plot.py
nectar/strategy/: dynamifl.py  dynmifl.py  fedslerp.py  mifl.py  miflx.py  optimifl.py
nectar/utils/: metrics.py  mi.py  model.py  params.py
nectar/workloads/: cifar100.py  imagenet.py  mnist.py
old/: sim-async.py  sim-emotion-fedavg.py  sim-emotion-fedistill.py  sim-emotion-mifl.py  sim-fedavg-imdb.py  sim-fedavg.py  sim-mifl-imdb.py  sim-mifl.py  sim-miflx.py  test.py
old/asyncfl/: async_history.py  async_server.py
old/loss/: cosine.py  jsd.py  kl.py  nkd.py  sp.py
old/mi_regressor/: metrics_distributed_fit_mi_cat.csv  mi_cat.csv  process.py
old/models/mnist/: __init__.py
old/strategy/: miflx.py
old/utils/: model.py
scripts/: plot_asyncfl.py  plot_mifl.py  plot_mifl_custom.py  plot_run.py  run_asyncfl.sh  run_cat.sh  run_emotion.sh  run_gauss.sh  run_imdb.sh  run_nectar.sh
(+7 files in other folders)
