[tool.poetry]
name = "nectar"
version = "0.1.0"
description = ""
authors = ["Sarang S <email.sarangs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flwr = { extras = ["simulation"], version = "^1.8.0" }
torch = "^2.3.0"
torchvision = "^0.18.0"
flwr-datasets = {extras = ["vision"], version = "^0.1.0"}
datasets = "^2.19.2"
hydra-core = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
